overflow-x fixed

--- a/src/components/ChefOfTheWeekSection/ChefOfTheWeekSection.module.scss
+++ b/src/components/ChefOfTheWeekSection/ChefOfTheWeekSection.module.scss
@@ -128,7 +128,14 @@
       justify-content: flex-start;
       align-items: center;
       padding-left: 0;
-      overflow-x: scroll;
+      overflow-x: auto;
+    }
+
+    @include mediumDesktopScreen {
+      display: flex;
+      flex-flow: column;
+      justify-content: flex-start;
+      align-items: flex-start;
     }
 
     .chefOfTheWeekRestaurantsTitle {
