--- a/src/components/SignatureDishes/SignatureDishes.module.scss
+++ b/src/components/SignatureDishes/SignatureDishes.module.scss
@@ -59,7 +59,7 @@
         flex-flow: row;
         justify-content: space-between;
         align-items: center;
-        overflow-x: scroll;
+        overflow-x: auto;
         width: 100%;
         gap: 24px;
       }
